# lmnr-python

./: .gitignore  CLAUDE.md  FIX_SUMMARY.md  LICENSE  README.md  modal_bundler.py  modal_function.py  pyproject.toml
.github/workflows/: build-package.yml  ensure-version-match.yml  python-publish-proto4.yml  python-publish.yml  run-tests.yml  scheduled-tests.yml  test-run-tests.yml
bundles/eval_bundle_test_improved_workflow_8b4faca8/: evaluation.py  pyproject.toml
bundles/eval_bundle_test_improved_workflow_8b4faca8/src/eval_bundle_test_improved_workflow_8b4faca8/: __init__.py
bundles/eval_bundle_test_improved_workflow_f647b6ee/: bundle_metadata.json  run_evaluation.py
bundles/eval_bundle_test_improved_workflow_f647b6ee/eval_bundle.egg-info/: PKG-INFO
bundles/eval_bundle_test_instrumentation_7db39c83/: bundle_metadata.json  evaluation.py  run_evaluation.py
bundles/eval_bundle_test_instrumentation_7db39c83/eval_bundle.egg-info/: requires.txt
bundles/eval_bundle_test_instrumentation_9bee3e83/: bundle_metadata.json  pyproject.toml  run  run_evaluation.py
bundles/eval_bundle_test_instrumentation_9bee3e83/eval_bundle.egg-info/: SOURCES.txt
examples/: exa_instrumentation_example.py  litellm_callback_example.py  respect_existing_context_example.py
examples/fastapi-app/: .env.example  README.md  pyproject.toml
examples/fastapi-app/src/: llm.py  main.py  schemas.py
examples/hermes-plugin/: README.md  pyproject.toml
examples/hermes-plugin/src/lmnr_hermes/: __init__.py  plugin.yaml
plans/lam-1715/: 01-app-server.md  03-python-sdk.md
src/lmnr/: __init__.py  cli.py  endpoint.py  model.py  types.py  version.py
src/lmnr/cli/: __init__.py  __main__.py  cli.py  cookiecutter.json  datasets.py  dev.py  discover.py  evals.py  evals_commands.py  formatter.py  output.py  rules.py  sql_command.py  traces.py  worker.py  zip.py
src/lmnr/mcp/: __init__.py  client.py  server.py
src/lmnr/openllmetry_sdk/: __init__.py  instruments.py
src/lmnr/opentelemetry_lib/: __init__.py  instruments.py
src/lmnr/sdk/: client.py  collector.py  constants.py  context.py  datasets.py  decorators.py  endpoint.py  eval_control.py  evaluations.py  interface.py  laminar.py  log.py  observations.py  registry.py  remote_debugger.py  remote_eval.py  rollout_control.py  tracing_types.py  types.py  utils.py
src/lmnr/semantic_conventions/: gen_ai_spans.py
src/lmnr/traceloop_sdk/: __init__.py  instruments.py
tests/: conftest.py  e2e_anthropic_rollout.py  test_anthropic_rollout.py  test_association_properties_none.py  test_browser_events.py  test_cli.py  test_client_evaluations.py  test_client_evaluators.py  test_client_rollout.py  test_client_sql.py  test_client_traces.py  test_context.py  test_context_propagation.py  test_debug_config.py  test_debug_pointer.py  test_debug_replay.py  test_debug_replay_cache.py  test_debug_replay_openai_responses.py  test_debug_runtime.py  test_debug_source_trace.py  test_debug_spine.py  test_deepagents.py  test_evaluations.py  test_events.py  test_exa.py  test_exporter.py  test_global_metadata.py  test_google_genai.py  test_initalize.py  test_initialize.py  test_instrument_initializers.py  test_langchain.py  test_langfuse.py  test_litellm.py  test_litellm_anthropic.py  test_litellm_gemini.py  test_litellm_openai.py  test_mixed_spans.py  test_non_standard_span.py  test_observe.py  (+20 more)
tests/cassettes/test_exa/: test_exa_answer.yaml  test_exa_find_similar.yaml  test_exa_find_similar_and_contents.yaml  test_exa_search_and_contents.yaml  test_exa_search_basic.yaml  test_exa_service_attributes_structure.yaml  test_exa_stream_answer.yaml
tests/cassettes/test_google_genai/: test_google_genai.yaml  test_google_genai_image.yaml  test_google_genai_image_raw_bytes.yaml  test_google_genai_multiple_tool_calls.yaml  test_google_genai_multiturn.yaml  test_google_genai_no_content.yaml  test_google_genai_no_tokens.yaml  test_google_genai_output_json_schema.yaml  test_google_genai_output_schema.yaml  test_google_genai_reasoning_tokens.yaml  test_google_genai_reasoning_tokens_async.yaml  test_google_genai_reasoning_tokens_with_include_thoughts.yaml  test_google_genai_reasoning_tokens_with_include_thoughts_async.yaml  test_google_genai_streaming.yaml  test_google_genai_string_contents.yaml  test_google_genai_tool_calls.yaml  test_google_genai_tool_calls_and_text_part.yaml  test_google_genai_tool_calls_history.yaml  test_google_genai_tool_calls_history_from_function_response.yaml
tests/cassettes/test_litellm/: test_litellm_completion_basic.yaml  test_litellm_completion_basic_async.yaml  test_litellm_completion_callback_doesnt_create_double_spans.yaml  test_litellm_completion_streaming.yaml  test_litellm_completion_streaming_async.yaml  test_litellm_completion_streaming_async_openai.yaml  test_litellm_completion_streaming_openai.yaml  test_litellm_completion_streaming_with_tool_call.yaml  test_litellm_completion_streaming_with_tool_call_async.yaml  test_litellm_completion_streaming_with_tool_call_openai.yaml  test_litellm_completion_with_parallel_tool_calls.yaml  test_litellm_completion_with_parallel_tool_calls_async.yaml  test_litellm_completion_with_structured_output.yaml  test_litellm_completion_with_structured_output_async.yaml  test_litellm_completion_with_structured_output_pydantic.yaml  test_litellm_completion_with_structured_output_pydantic_async.yaml  test_litellm_completion_with_tool_call.yaml  test_litellm_completion_with_tool_call_async.yaml  test_litellm_completion_with_tool_call_history.yaml  test_litellm_responses_basic.yaml  test_litellm_responses_basic_async.yaml  test_litellm_responses_streaming.yaml  test_litellm_responses_streaming_async.yaml  test_litellm_responses_with_tool_call.yaml  test_litellm_responses_with_tool_call_async.yaml
tests/cassettes/test_litellm_anthropic/: test_async_litellm_anthropic_basic.yaml  test_async_litellm_anthropic_text_block.yaml  test_async_litellm_anthropic_with_computer_tools.yaml  (+24 more)
tests/data/: base64_image.txt  base64_png_blank_1024_768.txt
tests/test_races/: conftest.py  test_tracer_wrapper_race_condition.py
(+381 files in other folders)
