# Laminar Python

# If you are looking for information about possible extras installations,
# i.e. what you can pass into `pip install 'lmnr[extra1,extra2]'`, please see the
# `[project.optional-dependencies]` section below.

[project]
name = "lmnr"
version = "0.7.23"
description = "Python SDK for Laminar"
authors = [
  { name = "lmnr.ai", email = "founders@lmnr.ai" }
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
dependencies = [
  "pydantic (>=2.0.3,<3.0.0)",
  "python-dotenv (>=1.0)",
  "opentelemetry-api (>=1.33.0)",
  "opentelemetry-sdk (>=1.33.0)",
  "opentelemetry-exporter-otlp-proto-http (>=1.33.0)",
  "opentelemetry-exporter-otlp-proto-grpc (>=1.33.0)",
  "opentelemetry-instrumentation (>=0.54b0)",
  "opentelemetry-semantic-conventions (>=0.54b0)",
  "opentelemetry-semantic-conventions-ai (>=0.4.13)",
  "tqdm (>=4.0)",
  "tenacity (>=8.0)",
  # Since 1.68.0, grpcio writes a warning message
  # that looks scary, but is harmless.
  # WARNING: All log messages before absl::InitializeLog() is called are written to STDERR
  # E0000 00:00:1737439981.199902 9456033 init.cc:229] grpc_wait_for_shutdown_with_timeout() timed out.
  #
  # Remove this comment when we make sure that grpcio has resolved this.
  # Related issue:
  # https://discuss.ai.google.dev/t/warning-all-log-messages-before-absl-initializelog-is-called-are-written-to-stderr-e0000-001731955515-629532-17124-init-cc-229-grpc-wait-for-shutdown-with-timeout-timed-out/50020
  # https://github.com/grpc/grpc/issues/38490
  "grpcio (>=1)",
  "httpx (>=0.24.0)",
  "orjson (>=3.0.0)",
  "packaging (>=22.0)",
  "opentelemetry-instrumentation-threading>=0.57b0",
]
# poetry would auto-generate these based on requires-python, but other build
# systems don't, so we need to specify them manually.
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.scripts]
lmnr = "lmnr.cli:cli"

[project.optional-dependencies]
# List of all possible extras. You can specify one or more of these extras
# when installing the package, using any of the following examples:
# `pip install 'lmnr[anthropic,groq]'`
# `uv pip install 'lmnr[anthropic,groq]'`
# `uv add lmnr --extra anthropic --extra groq`
# `poetry add 'lmnr[anthropic,groq]'`

alephalpha=["opentelemetry-instrumentation-alephalpha>=0.47.1"]
bedrock=["opentelemetry-instrumentation-bedrock>=0.47.1"]
chromadb=["opentelemetry-instrumentation-chromadb>=0.47.1"]
claude-agent-sdk=["lmnr-claude-code-proxy>=0.1.0a5"]
cohere=["opentelemetry-instrumentation-cohere>=0.47.1"]
crewai=["opentelemetry-instrumentation-crewai>=0.47.1"]
haystack=["opentelemetry-instrumentation-haystack>=0.47.1"]
lancedb=["opentelemetry-instrumentation-lancedb>=0.47.1"]
langchain=["opentelemetry-instrumentation-langchain>=0.47.1,<0.48.0"]
llamaindex=["opentelemetry-instrumentation-llamaindex>=0.47.1"]
marqo=["opentelemetry-instrumentation-marqo>=0.47.1"]
mcp=["opentelemetry-instrumentation-mcp>=0.47.1"]
milvus=["opentelemetry-instrumentation-milvus>=0.47.1"]
mistralai=["opentelemetry-instrumentation-mistralai>=0.47.1"]
ollama=["opentelemetry-instrumentation-ollama>=0.47.1"]
pinecone=["opentelemetry-instrumentation-pinecone>=0.47.1"]
qdrant=["opentelemetry-instrumentation-qdrant>=0.47.1"]
replicate=["opentelemetry-instrumentation-replicate>=0.47.1"]
sagemaker=["opentelemetry-instrumentation-sagemaker>=0.47.1"]
together=["opentelemetry-instrumentation-together>=0.47.1"]
transformers=["opentelemetry-instrumentation-transformers>=0.47.1"]
vertexai=["opentelemetry-instrumentation-vertexai>=0.47.1"]
watsonx=["opentelemetry-instrumentation-watsonx>=0.47.1"]
weaviate=["opentelemetry-instrumentation-weaviate>=0.47.1"]
# `all` is the group added for convenience, if you want to install all
# the instrumentations.
# we suggest using package-manager-specific commands instead,
# like `uv add lmnr --all-extras`
all = [
  "opentelemetry-instrumentation-alephalpha>=0.47.1",
  "opentelemetry-instrumentation-bedrock>=0.47.1",
  "opentelemetry-instrumentation-chromadb>=0.47.1",
  "opentelemetry-instrumentation-cohere>=0.47.1",
  "opentelemetry-instrumentation-crewai>=0.47.1",
  "opentelemetry-instrumentation-haystack>=0.47.1",
  "opentelemetry-instrumentation-lancedb>=0.47.1",
  "opentelemetry-instrumentation-langchain>=0.47.1,<0.48.0",
  "opentelemetry-instrumentation-llamaindex>=0.47.1",
  "opentelemetry-instrumentation-marqo>=0.47.1",
  "opentelemetry-instrumentation-mcp>=0.47.1",
  "opentelemetry-instrumentation-milvus>=0.47.1",
  "opentelemetry-instrumentation-mistralai>=0.47.1",
  "opentelemetry-instrumentation-ollama>=0.47.1",
  "opentelemetry-instrumentation-pinecone>=0.47.1",
  "opentelemetry-instrumentation-qdrant>=0.47.1",
  "opentelemetry-instrumentation-replicate>=0.47.1",
  "opentelemetry-instrumentation-sagemaker>=0.47.1",
  "opentelemetry-instrumentation-together>=0.47.1",
  "opentelemetry-instrumentation-transformers>=0.47.1",
  "opentelemetry-instrumentation-vertexai>=0.47.1",
  "opentelemetry-instrumentation-watsonx>=0.47.1",
  "opentelemetry-instrumentation-weaviate>=0.47.1"
]

[dependency-groups]
dev = [
  "autopep8>=2.3.2",
  "flake8>=7.2.0",
  "pytest>=8.3.5",
  "pytest-sugar>=1.0.0",
  "pytest-asyncio>=1.1.0",
  "playwright>=1.52.0",
  "vcrpy>=7.0.0",
  "openai>=1.107.0",
  "pytest-recording>=0.13.4",
  "patchright>=1.52.3",
  "google-genai>=1.31.0",
  "langgraph>=0.4.8",
  "langchain-core>=0.3.75",
  "langchain>=0.3.27",
  "litellm>=1.79.1",
  "groq>=0.30.0",
  "anthropic[bedrock]>=0.60.0",
  "langchain-openai>=0.3.32",
  "kernel>=0.18.0",
  "claude-agent-sdk>=0.1.6",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["examples/fastapi-app"]

[tool.ruff]
target-version = "py310"
