# Laminar Python

# If you are looking for information about possible extras installations,
# i.e. what you can pass into `pip install 'lmnr[extra1,extra2]'`, please see the
# `[project.optional-dependencies]` section below.

[project]
name = "lmnr"
version = "0.7.49"
description = "Python SDK for Laminar"
authors = [
  { name = "lmnr.ai", email = "founders@lmnr.ai" }
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  # grpcio used to have some issues with improper shutdown.
  # Fixed in opentelemetry-exporter-otlp-proto-grpc >=1.31.0.
  # Fixed in grpc >= 1.80.0. Remaining related issue to track
  # https://github.com/grpc/grpc/issues/41672
  "grpcio>=1",
  "httpx (>=0.24.0,<1.0.0)",
  "lmnr-claude-code-proxy>=0.1.17",
  "opentelemetry-api (>=1.39.0, <2.0.0)",
  "opentelemetry-sdk (>=1.39.0, <2.0.0)",
  "opentelemetry-exporter-otlp-proto-http (>=1.39.0, <2.0.0)",
  "opentelemetry-exporter-otlp-proto-grpc (>=1.39.0, <2.0.0)",
  "opentelemetry-instrumentation (>=0.54b0, <1.0.0)",
  "opentelemetry-instrumentation-threading (>=0.54b0, <1.0.0)",
  "opentelemetry-semantic-conventions (==0.60b1)",
  "opentelemetry-semantic-conventions-ai (==0.4.13)",
  "orjson (>=3.0.0,<4.0.0)",
  "packaging (>=22.0,<27.0)",
  "pydantic (>=2.0.3,<3.0.0)",
  "python-dotenv (>=1.0,<2.0)",
  "tqdm (>=4.0,<5.0)",
  "tenacity (>=8.0,<10.0)",
]
# poetry would auto-generate these based on requires-python, but other build
# systems don't, so we need to specify them manually.
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.scripts]
lmnr = "lmnr.cli:cli"

[project.optional-dependencies]
# List of all possible extras. You can specify one or more of these extras
# when installing the package, using any of the following examples:
# `pip install 'lmnr[bedrock,langchain]'`
# `uv pip install 'lmnr[bedrock,langchain]'`
# `uv add lmnr --extra bedrock --extra langchain`
# `poetry add 'lmnr[bedrock,langchain]'`

alephalpha=["opentelemetry-instrumentation-alephalpha==0.52.4"]
bedrock=["opentelemetry-instrumentation-bedrock==0.52.4"]
chromadb=["opentelemetry-instrumentation-chromadb==0.52.4"]
cohere=["opentelemetry-instrumentation-cohere==0.52.4"]
crewai=["opentelemetry-instrumentation-crewai==0.52.4"]
haystack=["opentelemetry-instrumentation-haystack==0.52.4"]
lancedb=["opentelemetry-instrumentation-lancedb==0.52.4"]
langchain=["opentelemetry-instrumentation-langchain==0.52.4"]
llamaindex=["opentelemetry-instrumentation-llamaindex==0.52.4"]
marqo=["opentelemetry-instrumentation-marqo==0.52.4"]
mcp=["opentelemetry-instrumentation-mcp==0.52.4"]
milvus=["opentelemetry-instrumentation-milvus==0.52.4"]
mistralai=["opentelemetry-instrumentation-mistralai==0.52.4"]
ollama=["opentelemetry-instrumentation-ollama==0.52.4"]
pinecone=["opentelemetry-instrumentation-pinecone==0.52.4"]
qdrant=["opentelemetry-instrumentation-qdrant==0.52.4"]
replicate=["opentelemetry-instrumentation-replicate==0.52.4"]
sagemaker=["opentelemetry-instrumentation-sagemaker==0.52.4"]
together=["opentelemetry-instrumentation-together==0.52.4"]
transformers=["opentelemetry-instrumentation-transformers==0.52.4"]
vertexai=["opentelemetry-instrumentation-vertexai==0.52.4"]
watsonx=["opentelemetry-instrumentation-watsonx==0.52.4"]
weaviate=["opentelemetry-instrumentation-weaviate==0.52.4"]
# `all` is the group added for convenience, if you want to install all
# the instrumentations.
# we suggest using package-manager-specific commands instead,
# like `uv add lmnr --all-extras`
all = [
  "opentelemetry-instrumentation-alephalpha==0.52.4",
  "opentelemetry-instrumentation-bedrock==0.52.4",
  "opentelemetry-instrumentation-chromadb==0.52.4",
  "opentelemetry-instrumentation-cohere==0.52.4",
  "opentelemetry-instrumentation-crewai==0.52.4",
  "opentelemetry-instrumentation-haystack==0.52.4",
  "opentelemetry-instrumentation-lancedb==0.52.4",
  "opentelemetry-instrumentation-langchain==0.52.4",
  "opentelemetry-instrumentation-llamaindex==0.52.4",
  "opentelemetry-instrumentation-marqo==0.52.4",
  "opentelemetry-instrumentation-mcp==0.52.4",
  "opentelemetry-instrumentation-milvus==0.52.4",
  "opentelemetry-instrumentation-mistralai==0.52.4",
  "opentelemetry-instrumentation-ollama==0.52.4",
  "opentelemetry-instrumentation-pinecone==0.52.4",
  "opentelemetry-instrumentation-qdrant==0.52.4",
  "opentelemetry-instrumentation-replicate==0.52.4",
  "opentelemetry-instrumentation-sagemaker==0.52.4",
  "opentelemetry-instrumentation-together==0.52.4",
  "opentelemetry-instrumentation-transformers==0.52.4",
  "opentelemetry-instrumentation-vertexai==0.52.4",
  "opentelemetry-instrumentation-watsonx==0.52.4",
  "opentelemetry-instrumentation-weaviate==0.52.4"
]

[dependency-groups]
dev = [
  "anthropic[bedrock]==0.95.0",
  "autopep8==2.3.2",
  "claude-agent-sdk==0.1.50",
  "flake8==7.3.0",
  "google-genai==1.68.0",
  "groq==1.1.2",
  "kernel==0.44.0",
  "langchain==1.2.15",
  "langchain-core==1.3.0",
  "langchain-openai==1.1.14",
  "langgraph==1.1.6",
  "litellm==1.83.7",
  "openai==2.30.0",
  "openai-agents==0.14.1",
  "patchright==1.58.2",
  "playwright==1.58.0",
  "pydantic-ai-slim==1.87.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-recording==0.13.4",
  "pytest-sugar==1.1.1",
  "vcrpy==8.1.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["examples/fastapi-app", "examples/hermes-plugin"]

[tool.ruff]
target-version = "py310"
