[project]
name = "lmnr-hermes"
version = "0.1.0"
description = "Laminar tracing plugin for Hermes Agent (nousresearch/hermes-agent)"
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
authors = [
    { name = "lmnr.ai", email = "founders@lmnr.ai" },
]
dependencies = [
    "lmnr>=0.7.0",
]

[project.entry-points."hermes_agent.plugins"]
lmnr-hermes = "lmnr_hermes:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmnr_hermes"]

[tool.uv.sources]
lmnr = { workspace = true }
