[project]
name = "lmnr-hermes"
version = "0.1.0"
description = "Laminar tracing plugin for Hermes Agent (nousresearch/hermes-agent)"
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
authors = [
    { name = "lmnr.ai", email = "founders@lmnr.ai" },
]
dependencies = [
    "lmnr>=0.7.0",
]

[project.entry-points."hermes_agent.plugins"]
# Hermes's entry-point loader calls `ep.load()` then looks for a `register`
# attribute on the result, so the entry must resolve to the *module*, not the
# register function itself.
lmnr-hermes = "lmnr_hermes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmnr_hermes"]

[tool.uv.sources]
lmnr = { workspace = true }
